# hud

./: .bzrignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  build.sh  config.h.in  configure  configure.ac
common/: Action.cpp  Action.h  ActionGroup.cpp  ActionGroup.h  AppstackModel.cpp  AppstackModel.h  CMakeLists.txt  DBusTypes.cpp  DBusTypes.h  Description.cpp  Description.h  HudDee.cpp  HudDee.h  MenuModel.cpp  MenuModel.h  NameObject.cpp  NameObject.h  ResultsModel.cpp  ResultsModel.h  Suggestion.cpp  Suggestion.h  WindowInfo.cpp  WindowInfo.h  query-columns.h
data/: CMakeLists.txt  Makefile.am  Makefile.in  cmudict.0.7a  com.canonical.Unity.WindowStack.xml  com.canonical.hud.Application.xml  com.canonical.hud.query.xml  com.canonical.hud.service  com.canonical.hud.service.in  com.canonical.hud.xml  com.canonical.indicator.appmenu.hud.search.gschema.xml  com.canonical.qtgmenu.xml  dbus-activation-hack.sh  dbus-activation-hack.sh.in  hud.conf.in  hud.service.in  window-stack-bridge.conf.in
docs/: CMakeLists.txt  Makefile.am  Makefile.in
docs/devel/: Makefile.am  Makefile.in
docs/libhud/: CMakeLists.txt  libhud-docs.xml  libhud-sections.txt  libhud.types
docs/libhud-client/: CMakeLists.txt  Makefile.am  Makefile.in  libhud-client-docs.xml  libhud-client-sections.txt
docs/libhud-gtk/: CMakeLists.txt
docs/man/: CMakeLists.txt  Makefile.in  hud-cli.1  hud-dump-application.1  hud-list-applications.1  hud-verify-app-info.1
libhud/: CMakeLists.txt  Makefile.am  Makefile.in  action-publisher.c  action-publisher.h  action.c  action.h  app-iface.c  app-iface.h  hud.c  hud.h  hud.pc.in  hudaction.c  hudaction.h  hudactionpublisher.c  hudactionpublisher.h  hudmanager.c  hudoperation-private.h  hudoperation.c  hudoperation.h  manager.c  manager.h  marshal.c  marshal.h  operation-private.h  operation.c  operation.h  service-iface.c  service-iface.h
libhud-client/: CMakeLists.txt  HudClient.cpp  HudClient.h  HudToolbarModel.cpp  HudToolbarModel.h  Makefile.am  Makefile.in  action-muxer.c  connection.c  connection.h  enum-types.h  enum-types.h.in  hud-client-connection.c  hud-client-connection.h  hud-client-query.c  hud-client-query.h  hud-client.h  hud-client.pc.in  libhud-client.map  param.c  param.h  query-iface.c  query-iface.h  query.c  query.h  service-iface.c  service-iface.h  toolbar-items.h
libhud-client/tests/: Makefile.am  hud-client-test.c
libhud-gtk/: CMakeLists.txt  Makefile.am  Makefile.in  manager.c  manager.h
libhud/demo/: Makefile.am  Makefile.in  consumer.c  consumer.vala  gimp.c  gimp.xml  gvtk.c  gvtk.vala  simple-test.c  yodawgiheardyoulikeactiongroup.c  yodawgiheardyoulikeactiongroup.h  yodawgiheardyoulikeactiongroup.vapi
libhud/tests/: Makefile.am  Makefile.in  hud-test.c
libqtgmenu/: CMakeLists.txt  QtGMenu.cpp  QtGMenu.h  QtGMenuConverter.cpp  QtGMenuConverter.h  QtGMenuExporter.cpp  QtGMenuExporter.h  QtGMenuImporter.cpp  QtGMenuImporter.h
libqtgmenu/internal/: CMakeLists.txt  QtGActionGroup.cpp  QtGActionGroup.h  QtGMenuDBus.cpp  QtGMenuDBus.h  QtGMenuImporterPrivate.cpp  QtGMenuImporterPrivate.h  QtGMenuModel.cpp  QtGMenuModel.h  QtGMenuUtils.cpp  QtGMenuUtils.h
service/: Application.cpp  Application.h  ApplicationImpl.cpp  ApplicationImpl.h  ApplicationList.cpp  ApplicationList.h  ApplicationListImpl.cpp  ApplicationListImpl.h  CMakeLists.txt  Collector.cpp  Collector.h  DBusMenuCollector.cpp  DBusMenuCollector.h  DBusMenuWindowCollector.cpp  DBusMenuWindowCollector.h  Factory.cpp  Factory.h  GMenuCollector.cpp  GMenuCollector.h  GMenuWindowCollector.cpp  GMenuWindowCollector.h  HardCodedSearchSettings.cpp  HardCodedSearchSettings.h  HudService.cpp  HudService.h  HudServiceImpl.cpp  HudServiceImpl.h  Item.cpp  Item.h  ItemStore.cpp  ItemStore.h  QGSettingsSearchSettings.cpp  Query.cpp  Query.h  QueryImpl.cpp  QueryImpl.h  Result.cpp  Result.h  SignalHandler.cpp  SignalHandler.h  (+15 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  abstract-app.h  action-muxer.c  app-iface.c  app-iface.h  appindicator-source.c  application-list.c  application-list.h  application-source-context.c  application-source-context.h  application-source.c  application-source.h  appmenu-registrar.c  com.canonical.hud.xml  dbusmenu-collector.c  dbusmenu-collector.h  debug-source.c  enum-types.c  enum-types.c.in  enum-types.h  enum-types.h.in  hud-cli.c  hud-collector.c  hud-collector.h  hud-iface.c  hud-iface.h  hud-julius-listen.c  hud-pronounce-for-word.c  hud-query-iface.c  hud-query-iface.h  hud-service.c  hud-verify-app-info.c  hud.xml  hudappindicatorsource.c  hudappindicatorsource.h  hudappmenuregistrar.c  hudcollector.c  huddbusmenucollector.c  (+69 more)
tests/: CMakeLists.txt  Makefile.am  Makefile.in  app-list-dummy.c  app-list-dummy.h  dbusmenu-json-loader.c  gobject.suppression  hud-client-test.c  hud-performance.c  hudmanualsource.c  hudmanualsource.h  hudrandomsource.c  hudrandomsource.h  hudtestutils.c  hudtestutils.h  manual-source.c  manual-source.h  random-source.c  random-source.h  run-under-xvfb.sh  run-xvfb.sh  test-app-indicator-source.c  test-application-list.c  test-application-source.c  test-bad-app-info.c  test-dbus-message-count.in  test-distance.c  test-hud-action-publisher.c  test-hud-client-connection.c  test-hud-client-param.c  test-hud-client-query.c  test-hud-client.c  test-hud-manager.c  test-huditem.c  test-indicator-source.c  test-keyword-mapping.c  test-load-app-info.c  test-menu-input-model-deep.c  test-menu-input-model-shortcuts.c  test-menu-input-model-simple.c  (+21 more)
tests/data/: com.canonical.hud.test.xml  valgrind.suppression
tests/integration/: CMakeLists.txt  (+2 more)
tools/: CMakeLists.txt  Makefile.am  Makefile.in  hud-cli-appstack.c  hud-cli-param.c  hud-cli.c  hud-pronounce-for-word.c
tools-vala/: CMakeLists.txt  Makefile.am  Makefile.in  hud-gtk.c  hud-gtk.ui  hud-gtk.vala
window-stack-bridge/: AbstractWindowStack.cpp  AbstractWindowStack.h  BamfWindowStack.cpp  BamfWindowStack.h  CMakeLists.txt  PlatformApiWindowStack.cpp  PlatformApiWindowStack.h  WindowStack.cpp  WindowStack.h  main.cpp
(+108 files in other folders)
